add hot module, add polyfill

--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "browserify ./src/js/index.js -o bundle.js"
+    "build": "browserify ./src/index.js -o bundle.js",
+    "dev": "watchify ./src/index.js -o bundle.js -d"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kkurno/kkurno.github.io.git"
+    "url": "https://github.com/kkurno/kkurno.github.io.git"
   },
   "keywords": [
     "jetdo"
@@ -21,6 +22,8 @@
   },
   "homepage": "https://github.com/kkurno/kkurno.github.io#readme",
   "devDependencies": {
-    "eslint": "^5.16.0"
+    "eslint": "^5.16.0",
+    "watchify": "^3.11.1",
+    "express": "^4.16.4"
   }
 }
