--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "https://kkurno.github.io",
   "main": "index.js",
   "scripts": {
-    "build": "browserify ./src/index.js -o ./build/bundle.js",
-    "hot-build": "watchify ./src/index.js -o ./build/bundle.js -d",
+    "build": "browserify ./src/index.js -o ./public/bundle.js",
+    "hot-build": "watchify ./src/index.js -o ./public/bundle.js -d",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build"
+    "deploy": "gh-pages -b master -d public"
   },
   "repository": {
     "type": "git",
